--- a/changelog.txt
+++ b/changelog.txt
@@ -2,4 +2,7 @@
 All notable changes to this project will be documented in this file.
 ## [0.0.1] - 2021-07-14
 ### Added
+- invoke phpinfo(); in index.php
+## [0.0.0] - 2021-07-14
+### Added
 - index.php file
